Added new 'Find Shelter' Page

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/provider": "^2.4.2",
+    "@chakra-ui/react": "^3.5.1",
     "@clerk/nextjs": "^6.10.2",
+    "@emotion/react": "^11.14.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
