--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@clerk/nextjs": "^6.10.2",
     "@emotion/react": "^11.14.0",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
