added axios import

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "next": "15.1.6",
@@ -17,25 +18,25 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/body-parser": "^1.19.5",
-    "@types/express": "^5.0.0",
     "@chakra-ui/provider": "^2.4.2",
     "@chakra-ui/react": "^3.5.1",
     "@clerk/nextjs": "^6.10.2",
     "@emotion/react": "^11.14.0",
-    "next": "15.1.6",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
+    "@eslint/eslintrc": "^3",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "postcss": "^8",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
