--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "@vis.gl/react-google-maps": "^1.5.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
@@ -24,14 +25,6 @@
     "@chakra-ui/react": "^3.5.1",
     "@clerk/nextjs": "^6.10.2",
     "@emotion/react": "^11.14.0",
-    "next": "15.1.6",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0"
-  },
-  "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
