--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3",
     "run-parallel": "^1.2.0",
     "spinners-react": "^1.0.10"
   },
